--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-  <title>WTF TRADE | CS:GO Trading Bot | Discover a better way to trade skins - Automated and Secured Bot by HELL TRADE</title>
+  <title>WTF TRADE | CS:GO Trading Bot | Discover a better way to trade skins - Automated and Secured Bot by WTF TRADE</title>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height">
@@ -38,6 +38,8 @@
     </div>
   </div>
 
+  <div class="live-preview" id="livePreview"></div>
+
   <div class="pop-up" id="settingsPopUp">
     <div class="pop-up-title">
       <h1>Trade URL</h1>
@@ -56,6 +58,7 @@
   </div>
 
   <div class="pop-up" id="depositPopUp">
+    <img src="assets/Logo.png" class="logo-animation" alt="">
     <div class="pop-up-title">
       <h1>Deposit</h1>
     </div>
@@ -81,7 +84,7 @@
   <nav>
     <!-- Logo -->
     <a href="#">
-      <img src="assets/Logo.png" alt="">Best trading & gambling site!</a>
+      <img src="assets/Logo.png" alt="">Proud owners of Best trading & gambling site!</a>
     <ul class="links">
       <li>
         <a href="#" class="page-current">Trade</a>
@@ -98,8 +101,9 @@
       <!-- @if(Auth::check()) -->
       <li>
         <a href="#">
-          <i class="icon-logout"></i>Quit</li>
+          <i class="icon-logout"></i>Quit
         </a>
+        </li>
       <li>
         <i class="icon-online"></i>
         <span>Online: 341</span>
@@ -166,7 +170,7 @@
         </div>
       </div>
     </section>
-    <section>
+    <section id="middle">
       <div class="discount">
         <h4 class="title">
           <i class="icon-tag"></i>
@@ -185,7 +189,8 @@
           <span>Welcome</span>
         </h4>
         <small>
-          Recusandae repellendus rerum asperiores nisi expedita inventore dignissimos at laudantium magnam.
+           Welcome to best trading website in 2018. On WTF Trade, you can find everything you need for the best price. Clutch Case
+          Skins are now available in our offer, check now! Also try your luck on our gamble website!
           <br>
         </small>
         <h4 class="title">
@@ -193,7 +198,7 @@
           <span>First Time Bonus</span>
         </h4>
         <small>
-          Recusandae repellendus rerum asperiores nisi expedita inventore dignissimos at laudantium magnam.
+           Spending over <strong>100$</strong> for the first time will give you 10% discount on your next trade! This can be use only once.
           <br>
         </small>
         <hr>
@@ -263,34 +268,34 @@
         </h4>
         <div class="commision-content">
           <div>
-            <small>Keyes</small>
+            <small>Keys</small>
             <br> 102%
             <i class="icon-refresh"></i>
             104%
           </div>
           <div>
             <small>Knives</small>
-            <br> 102%
+            <br> 98%
             <i class="icon-refresh"></i>
-            104%
+            100%
           </div>
           <div>
             <small>Rare Weapons</small>
-            <br> 102%
+            <br> 98%
             <i class="icon-refresh"></i>
-            104%
+            100%
           </div>
           <div>
             <small>Weapons</small>
-            <br> 102%
+            <br> 92%
             <i class="icon-refresh"></i>
-            104%
+            95%
           </div>
           <div>
             <small>Misc.</small>
-            <br> 102%
+            <br> 88%
             <i class="icon-refresh"></i>
-            104%
+            90%
           </div>
         </div>
       </div>
@@ -402,6 +407,126 @@
             <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
             <h5>$0.35</h5>
           </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
+          <div class="item">
+            <div class="item-info">
+              <h5>Karambit | Doppler Ruby</h5>
+              <small>Factory New</small>
+            </div>
+            <img src="assets/items/karambit.png" alt="ITEM NAME HERE">
+            <h5>$0.35</h5>
+          </div>
         </div>
       </div>
     </section>
@@ -422,6 +547,70 @@
     const alertCloseBtn = document.querySelector('#alertClose')
 
     const wrapper = document.querySelector('.main-wrapper')
+
+    const middle = document.querySelector('#middle')
+    const items = document.querySelectorAll('.item')
+    const livePreview = document.querySelector('#livePreview')
+
+    window.addEventListener('click', (e) => {
+      e.preventDefault()
+      setTimeout(() => {
+        livePreview.style.opacity = '0'
+      }, 10)
+      livePreview.classList.remove('live-preview-active')
+    })
+
+    items.forEach(item => {
+      item.addEventListener('contextmenu', (e) => {
+        e.preventDefault()
+        let x;
+        let y;
+        if (e.pageX - 120 < 0) {
+          x = e.pageX + Math.abs(e.pageX - 120)
+        } else {
+          x = e.pageX
+        }
+        if (e.pageY - 375 < 0) {
+          y = e.pageY + Math.abs(e.pageY - 375)
+        } else {
+          y = e.pageY
+        }
+        livePreview.style.opacity = '0'
+        livePreview.classList.remove('live-preview-active')
+
+        // URADI AJAX CALL ZA DODATNE PODATKE (obavezno za hardcoded)
+        // Ovde izvlacim podatke iz renderovanog html
+        let itemData = {
+          name: item.childNodes[1].childNodes[1].innerText,
+          exterior: item.childNodes[1].childNodes[3].innerText,
+          img: item.childNodes[3].src,
+          price: item.childNodes[5].innerText,
+          float: 0.2546546546, // Hardcoded
+          rarity: 'Covert', // Hardcoded
+          bot: '#127' // Hardcoded
+        }
+        console.log(itemData)
+        livePreview.innerHTML = `
+          <div class="live-preview-title">
+            <h2>Live Inspect</h2>
+          </div>
+          <img src="${itemData.img}"></img>
+          <h4>${itemData.name}</h4>
+          <small><span>Float:</span> ${itemData.float}</small>
+          <div class="float-meter"><span style="left:${itemData.float * 100}%;"></span></div>
+          <small><span>Exterior:</span> ${itemData.exterior}</small> <br>
+          <small><span>Rarity:</span> ${itemData.rarity}</small> <br>
+          <small><span>Bot:</span> ${itemData.bot}</small> <br>
+          `
+        livePreview.classList.add('live-preview-active')
+        livePreview.style.left = x + 'px'
+        livePreview.style.top = y + 'px'
+        setTimeout(() => {
+          livePreview.style.opacity = '.9'
+        }, 10)
+      })
+    })
+
     /*** TOGGLE ***/
     toggle.addEventListener('click', () => {
       nav.classList.toggle('nav-active')
@@ -456,6 +645,10 @@
       setTimeout(() => {
         depositPopUp.style.opacity = '1'
       }, 10)
+      depositPopUp.classList.add('animate-logo')
+      setTimeout(() => {
+        depositPopUp.classList.remove('animate-logo')
+      }, 1500)
     })
 
     /**
