--- a/src/pages/support.html
+++ b/src/pages/support.html
@@ -103,10 +103,20 @@
           <div class="section-content">
             <h2><u>About us</u></h2>
             <ul>
-              <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda modi ducimus voluptates distinctio illum fugiat tempora sit dolorum minus provident voluptatem accusamus adipisci doloribus rerum totam facere doloremque, ex voluptate!</li>
-              <li>Dolorum et ab obcaecati omnis esse placeat sint temporibus, maiores adipisci rerum quam mollitia illo quia. Quaerat praesentium dolore deserunt incidunt eum. Dolorem eligendi aliquid nisi tenetur officiis ex inventore.</li>
-              <li>Tempore iure voluptates quis ad consectetur, quisquam architecto veniam. Laborum consectetur, aliquid ut aliquam perferendis illo iusto fuga tenetur nesciunt. Veniam, molestias at officiis perferendis sint deleniti eius dolore officia?</li>
-              <li>Ipsum possimus, amet omnis voluptates repellendus fugiat impedit at laboriosam ea illum. Sed ipsum vero soluta nam magnam fugit necessitatibus veritatis eligendi corporis, odit a eum distinctio! Adipisci, explicabo assumenda.</li>
+              <li>
+                WTF Trade is well known trading website for CS:GO items. We are unique company with coins system, double protection and 24/7
+                online support. WTFskin.trade is also known for running as one of the first trading websites for CS:GO back in the days,
+                our site was running for straight 3 years, becouse of funding reasons we have been pushed to close the site for some time.
+              </li>
+              <li>
+                 You may also know us for gamble site <a href="http://www.wtfskins.com">www.wtfskins.com</a>
+              </li>
+              <li>
+                 WTF Trade is re-opened in January 2018.
+              </li>
+              <li>
+                 We have licenced over 145,000 trades.
+              </li>
             </ul>
           </div>
         </section>
@@ -117,16 +127,34 @@
           <div class="section-content">
             <ul>
               <li>
-                <h2><u>Question 1</u></h2>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae. Dolorem dolor harum accusamus consectetur et eaque eum cumque commodi fugit explicabo. Iure aliquam, maxime nam ea voluptas natus necessitatibus.
+                <h2><u>Why don't i see some of the CS:Go items in my inventory on the website?</u></h2>
+               Steam api is known for having severe delays, please log out and log back in or wait for the issue to be solved. If that
+              doesn't work you can consult our live support.
               </li>
               <li>
-                <h2><u>Question 2</u></h2>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae. Dolorem dolor harum accusamus consectetur et eaque eum cumque commodi fugit explicabo. Iure aliquam, maxime nam ea voluptas natus necessitatibus.
+                <h2><u>Is there any risk involved?</u></h2>
+                 No. Once when you deposit you can withdraw anything you want with your coins, however you may be careful trading your items
+                becouse we are not refunding.
               </li>
               <li>
-                <h2><u>Question 3</u></h2>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae. Dolorem dolor harum accusamus consectetur et eaque eum cumque commodi fugit explicabo. Iure aliquam, maxime nam ea voluptas natus necessitatibus.
+                <h2><u>I have an issue with receiving trade offers from Bubble Trade</u></h2>
+                 There are many things that can cause the following issue. According to our analysis the primary cause of this is errors
+                when entering your trade url, please update your trade offer by copying and pasting it from your steam profile into Settings
+                bar. Other main cause is issues with steam api, as stated above steam is for its frequent downtime, please wait or consult
+                our live support.
+              </li>
+              <li>
+                <h2>
+                  <u>Where can i find my trade offer from WTFskin Trade?</u>
+                </h2>
+                When you deposit your skins our bot will send you trade offer for the item you want to trade. Notification will open once
+                when you want to deposit your item, you can accept tade offer trough the site or you can go to Steam and check your tade
+                notifications bar. You will recive trade offer for deposit/withdraw only from this bot's: <br>
+                 WTF TRADE | BOT #04 <br>
+                 WTF TRADE | BOT #05 <br>
+                 WTF TRADE | BOT #06 <br>
+                 WTF TRADE | BOT #07 <br>
+                 WTF TRADE | BOT #08
               </li>
             </ul>
           </div>
@@ -134,8 +162,10 @@
         <section>
           <div class="section-title"><h1>Support</h1></div>
           <div class="section-content">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
-            <p>Dolores architecto ex, omnis vel quas numquam? Facilis quae adipisci nemo sequi tempore?</p> 
+            <p>For any information you can contact our 24/7 live support.</p>
+            <p>If something is not right you can always contact us directley from your mailbox on
+              <a href="mailto:wtfskin-trade@usa.com">wtfskin-trade@usa.com.</a>
+            </p> 
             <div class="contact">
               <input type="text" name="" id="email" placeholder="Contact email" required>
               <input type="text" name="" id="subject" placeholder="Subject">
@@ -146,7 +176,7 @@
         <section>
           <div class="section-title"><h1>HOW TO USE?</h1></div>
           <div class="section-content">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+             If you are confused on any way you can always follow our simple tutorial for trading on Bubble Trade.
             <a href="#" class="super-big-link">CLICK HERE</a>
           </div>
         </section>
