--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-  <title>WTF TRADE | CS:GO Trading Bot | Discover a better way to trade skins - Automated and Secured Bot by HELL TRADE</title>
+  <title>WTF TRADE | CS:GO Trading Bot | Discover a better way to trade skins - Automated and Secured Bot by WTF TRADE</title>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height">
