--- a/src/index.html
+++ b/src/index.html
@@ -553,7 +553,7 @@
     const livePreview = document.querySelector('#livePreview')
 
     window.addEventListener('click', (e) => {
-      e.preventDefault()
+      // e.preventDefault()
       setTimeout(() => {
         livePreview.style.opacity = '0'
       }, 10)
