--- a/src/pages/support.html
+++ b/src/pages/support.html
@@ -94,28 +94,31 @@
       <i id="toggle" class="icon-hamburger"></i>
     </nav>
 
-    <main>
       <div class="support-wrapper">
         <section>
           <div class="section-title">
             <h1>Welcome to WTF Trade, best available trade site!</h1>
           </div>
           <div class="section-content">
-            <h2><u>About us</u></h2>
+            <h2>
+              <u>About us</u>
+            </h2>
             <ul>
               <li>
                 WTF Trade is well known trading website for CS:GO items. We are unique company with coins system, double protection and 24/7
-                online support. WTFskin.trade is also known for running as one of the first trading websites for CS:GO back in the days,
-                our site was running for straight 3 years, becouse of funding reasons we have been pushed to close the site for some time.
+                online support. WTFskin.trade is also known for running as one of the first trading websites for CS:GO back in
+                the days, our site was running for straight 3 years, becouse of funding reasons we have been pushed to close the
+                site for some time.
               </li>
               <li>
-                 You may also know us for gamble site <a href="http://www.wtfskins.com">www.wtfskins.com</a>
+                You may also know us for gamble site
+                <a href="http://www.wtfskins.com">www.wtfskins.com</a>
               </li>
               <li>
-                 WTF Trade is re-opened in January 2018.
+                WTF Trade is re-opened in January 2018.
               </li>
               <li>
-                 We have licenced over 145,000 trades.
+                We have licenced over 145,000 trades.
               </li>
             </ul>
           </div>
@@ -127,45 +130,53 @@
           <div class="section-content">
             <ul>
               <li>
-                <h2><u>Why don't i see some of the CS:Go items in my inventory on the website?</u></h2>
-               Steam api is known for having severe delays, please log out and log back in or wait for the issue to be solved. If that
-              doesn't work you can consult our live support.
+                <h2>
+                  <u>Why don't i see some of the CS:Go items in my inventory on the website?</u>
+                </h2>
+                Steam api is known for having severe delays, please log out and log back in or wait for the issue to be solved. If that doesn't
+                work you can consult our live support.
               </li>
               <li>
-                <h2><u>Is there any risk involved?</u></h2>
-                 No. Once when you deposit you can withdraw anything you want with your coins, however you may be careful trading your items
+                <h2>
+                  <u>Is there any risk involved?</u>
+                </h2>
+                No. Once when you deposit you can withdraw anything you want with your coins, however you may be careful trading your items
                 becouse we are not refunding.
               </li>
               <li>
-                <h2><u>I have an issue with receiving trade offers from Bubble Trade</u></h2>
-                 There are many things that can cause the following issue. According to our analysis the primary cause of this is errors
-                when entering your trade url, please update your trade offer by copying and pasting it from your steam profile into Settings
-                bar. Other main cause is issues with steam api, as stated above steam is for its frequent downtime, please wait or consult
-                our live support.
+                <h2>
+                  <u>I have an issue with receiving trade offers from Bubble Trade</u>
+                </h2>
+                There are many things that can cause the following issue. According to our analysis the primary cause of this is errors when
+                entering your trade url, please update your trade offer by copying and pasting it from your steam profile into
+                Settings bar. Other main cause is issues with steam api, as stated above steam is for its frequent downtime, please
+                wait or consult our live support.
               </li>
               <li>
                 <h2>
                   <u>Where can i find my trade offer from WTFskin Trade?</u>
                 </h2>
                 When you deposit your skins our bot will send you trade offer for the item you want to trade. Notification will open once
-                when you want to deposit your item, you can accept tade offer trough the site or you can go to Steam and check your tade
-                notifications bar. You will recive trade offer for deposit/withdraw only from this bot's: <br>
-                 WTF TRADE | BOT #04 <br>
-                 WTF TRADE | BOT #05 <br>
-                 WTF TRADE | BOT #06 <br>
-                 WTF TRADE | BOT #07 <br>
-                 WTF TRADE | BOT #08
+                when you want to deposit your item, you can accept tade offer trough the site or you can go to Steam and check
+                your tade notifications bar. You will recive trade offer for deposit/withdraw only from this bot's:
+                <br> WTF TRADE | BOT #04
+                <br> WTF TRADE | BOT #05
+                <br> WTF TRADE | BOT #06
+                <br> WTF TRADE | BOT #07
+                <br> WTF TRADE | BOT #08
               </li>
             </ul>
           </div>
         </section>
         <section>
-          <div class="section-title"><h1>Support</h1></div>
+          <div class="section-title">
+            <h1>Support</h1>
+          </div>
           <div class="section-content">
             <p>For any information you can contact our 24/7 live support.</p>
             <p>If something is not right you can always contact us directley from your mailbox on
               <a href="mailto:wtfskin-trade@usa.com">wtfskin-trade@usa.com.</a>
-            </p> 
+            </p>
             <div class="contact">
               <input type="text" name="" id="email" placeholder="Contact email" required>
               <input type="text" name="" id="subject" placeholder="Subject">
@@ -174,14 +185,15 @@
           </div>
         </section>
         <section>
-          <div class="section-title"><h1>HOW TO USE?</h1></div>
+          <div class="section-title">
+            <h1>HOW TO USE?</h1>
+          </div>
           <div class="section-content">
-             If you are confused on any way you can always follow our simple tutorial for trading on Bubble Trade.
+            If you are confused on any way you can always follow our simple tutorial for trading on Bubble Trade.
             <a href="#" class="super-big-link">CLICK HERE</a>
           </div>
         </section>
       </div>
-    </main>
   </div>
   <script>
       const toggle = document.querySelector('#toggle')
