site title fix on support page

--- a/src/pages/support.html
+++ b/src/pages/support.html
@@ -57,7 +57,7 @@
     <nav>
       <!-- Logo -->
       <a href="#">
-        <img src="../assets/Logo.png" alt="">Best trading & gambling site!</a>
+        <img src="../assets/Logo.png" alt="">Proud owners of best trading & gambling site!</a>
       <ul class="links">
         <li>
           <a href="../index.html">Trade</a>
