--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
   <div class="main-wrapper">
   <nav>
     <!-- Logo -->
-    <a href="#">
+    <a href="#" id="title">
       <img src="assets/Logo.png" alt="">Proud owners of Best trading & gambling site!</a>
     <ul class="links">
       <li>
