--- a/src/pages/support.html
+++ b/src/pages/support.html
@@ -56,7 +56,7 @@
   <div class="main-wrapper">
     <nav>
       <!-- Logo -->
-      <a href="#">
+      <a href="#" id="title">
         <img src="../assets/Logo.png" alt="">Proud owners of best trading & gambling site!</a>
       <ul class="links">
         <li>
