--- a/src/index.html
+++ b/src/index.html
@@ -189,8 +189,8 @@
           <span>Welcome</span>
         </h4>
         <small>
-           Welcome to best trading website in 2018. On WTF Trade, you can find everything you need for the best price. Clutch Case
-          Skins are now available in our offer, check now! Also try your luck on our gamble website!
+          Welcome to best trading website in 2018. On WTF Trade, you can find everything you need for the best price. Also try your
+          luck on our gamble website!
           <br>
         </small>
         <h4 class="title">
@@ -297,7 +297,19 @@
             <i class="icon-refresh"></i>
             90%
           </div>
+        <hr>
         </div>
+      </div>
+      <div class="info">
+        <h4 class="title">
+          <i class="icon-new"></i>
+          <span>NEW COLLECTION</span>
+        </h4>
+        <small>
+          Clutch Case Skins are now available in our offer, check now and trade for best price! You can inspect items with <strong>right click</strong>
+          on your mouse.
+        </small>
+        <hr>
       </div>
     </section>
     <section>
