--- a/src/index.html
+++ b/src/index.html
@@ -201,6 +201,15 @@
            Spending over <strong>100$</strong> for the first time will give you 10% discount on your next trade! This can be use only once.
           <br>
         </small>
+        <h4 class="title" style="padding-top: 1em;">
+          <i class="icon-new"></i>
+          <span>NEW COLLECTION</span>
+        </h4>
+        <small>
+          Clutch Case Skins are now available in our offer, check now and trade for best price! You can inspect items with
+          <strong>right click</strong>
+          on your mouse.
+        </small>
         <hr>
       </div>
       <div class="bot-filters">
@@ -297,19 +306,7 @@
             <i class="icon-refresh"></i>
             90%
           </div>
-        <hr>
         </div>
-      </div>
-      <div class="info">
-        <h4 class="title">
-          <i class="icon-new"></i>
-          <span>NEW COLLECTION</span>
-        </h4>
-        <small>
-          Clutch Case Skins are now available in our offer, check now and trade for best price! You can inspect items with <strong>right click</strong>
-          on your mouse.
-        </small>
-        <hr>
       </div>
     </section>
     <section>
