--- a/src/pages/support.html
+++ b/src/pages/support.html
@@ -74,8 +74,9 @@
         <!-- @if(Auth::check()) -->
         <li>
           <a href="#">
-            <i class="icon-logout"></i>Quit</li>
+            <i class="icon-logout"></i>Quit
         </a>
+      </li>
         <li>
           <i class="icon-online"></i>
           <span>Online: 341</span>
